加了一张图

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>次元精灵科技有限公司</title>
 </head>
+<style>
+    body {
+        display: block;
+        margin: 0px;
+    }   
+    .bg{
+        height: 1844px;
+        background-image: url(./bg.png);
+        background-repeat: no-repeat;
+        background-position: center top;
+        margin: 0px 0px 0px 0px;
+        padding: 0px 0px 0px 0px;
+    }
+</style>
 <body>
+<div id="bg" class="bg">
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+</div>
 </body>
 </html>
