--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>次元精灵科技有限公司</title>
-</head>
-<style>
-    body {
-        display: block;
-        margin: 0px;
-    }   
-    .bg{
-        height: 1844px;
-        background-image: url(./bg.png);
-        background-repeat: no-repeat;
-        background-position: center top;
-        margin: 0px 0px 0px 0px;
-        padding: 0px 0px 0px 0px;
-    }
-</style>
-<body>
-<div id="bg" class="bg">
-
-</div>
-</body>
+<html lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- <script src="./jquery-3.5.1.min.js"></script> -->
+    <link rel="icon" href="favicon.ico">
+    <title>website</title>
+  <script defer src="js/07b066a51664175536030.js"></script><script defer src="js/1d98edea1664175536030.js"></script></head>
+  <body>
+    <noscript>
+      <strong>We're sorry but website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
