--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <script src="./jquery-3.5.1.min.js"></script> -->
     <link rel="icon" href="favicon.ico">
-    <title>website</title>
+    <title>深圳市次元精灵科技有限公司</title>
   <script defer src="js/07b066a51664175536030.js"></script><script defer src="js/1d98edea1664175536030.js"></script></head>
   <body>
     <noscript>
