--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+    <meta name="viewport">
     <!-- <script src="./jquery-3.5.1.min.js"></script> -->
     <link rel="icon" href="favicon.ico">
     <title>次元精灵</title>
-  <script defer src="js/07b066a51664175536030.js"></script><script defer src="js/1d98edea1664175536030.js"></script></head>
+  <script defer src="js/07b066a51664178147306.js"></script><script defer src="js/528cd1931664178147306.js"></script></head>
   <body>
     <noscript>
       <strong>We're sorry but website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
